tests/NormalTests/paczka1/fuzzy1/36877660.err
Error in line 3: hI0XNpdXZg S570 60,7
Error in line 4: A425 S397 36,4
Error in line 9: Av8B S570 84,0
Error in line 12: ni1Sp5b S333 63,8
Error in line 19: hI0XNpdXZg S333 80,2
Error in line 25: ni1Sp5b S397 87,6
